# xiaomi

./: .gitignore  README.md  day14.md
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: AAudioRender.h  ANWRender.h  AudioChannel.h  BaseChannel.h  Clock.h  Constant.h  Convert.h  EGLRender.h  LockFreeQueue.h  Log.h  Player.h  PlayerContext.h  Queue.h  RingQueue.h  ThreadPool.h  VideoChannel.h
app/src/main/cpp/src/: AAudioRender.cpp  ANWRender.cpp  AudioChannel.cpp  Convert.cpp  Demuxer.cpp  EGLRender.cpp  LockFreeQueue.cpp  Player.cpp  Queue.cpp  ThreadPool.cpp  VideoChannel.cpp  VideoRender.cpp  native_lib.cpp
app/src/main/java/com/example/androidplayer/: MainActivity.java  Player.java
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
